--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "cloudinary": "^2.6.1",
     "next": "15.3.3",
+    "next-cloudinary": "^6.16.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
