--- a/package.json
+++ b/package.json
@@ -13,7 +13,13 @@
     "prepare": "husky"
   },
   "dependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/jsonwebtoken": "^9.0.9",
+    "bcryptjs": "^3.0.2",
+    "cloudinary": "^2.6.1",
+    "jsonwebtoken": "^9.0.2",
     "next": "15.3.3",
+    "next-cloudinary": "^6.16.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0"
   },
