--- a/package.json
+++ b/package.json
@@ -19,14 +19,19 @@
     "@types/jsonwebtoken": "^9.0.9",
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.6.1",
+    "framer-motion": "^12.16.0",
     "jsonwebtoken": "^9.0.2",
     "next": "15.3.3",
     "next-cloudinary": "^6.16.0",
+    "next-pwa": "^5.6.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-intersection-observer": "^9.16.0",
     "react-photo-album": "^3.1.0",
-    "swr": "^2.3.3"
+    "react-swipeable": "^7.0.2",
+    "swr": "^2.3.3",
+    "web-push": "^3.6.7",
+    "workbox-window": "^7.3.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
