Fix photo gallery display and hover animations - Fixed photo grid not displaying due to server not running - Fixed react-photo-album v3.x compatibility issues in render function - Implemented JavaScript-based hover animations (CSS approach failed) - Fixed 'photos' reference error by reorganizing useEffect hooks - Removed global border-radius to maintain square edges on all photos - Made hover animations more subtle (4px lift, 1% scale, lighter shadow) - Added defensive checks for undefined photo objects - Properly handle wrapperStyle and imageProps from react-photo-album

--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "bcryptjs": "^3.0.2",
     "cloudinary": "^2.6.1",
     "framer-motion": "^12.16.0",
+    "geist": "^1.4.2",
     "jsonwebtoken": "^9.0.2",
     "next": "15.3.3",
     "next-cloudinary": "^6.16.0",
@@ -27,6 +28,7 @@
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-intersection-observer": "^9.16.0",
+    "react-lazy-load-image-component": "^1.6.3",
     "react-photo-album": "^3.1.0",
     "react-swipeable": "^7.0.2",
     "swr": "^2.3.3",
